--- a/quiz.html
+++ b/quiz.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <title>Quiz</title>
+    <title>Arivoli: Quiz</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,11 +12,12 @@
 <body>
     <div id="app">
         <header class="app-header">
-            <div class="brand">Quiz</div>
+            <div class="brand">Arivoli: Test for in Minds</div>
             <div class="controls">
                 <button id="back-btn" class="ghost">⟵ Back</button>
             </div>
         </header>
+
         <main class="board" aria-live="polite">
             <section class="question-card" id="question-card">
                 <div class="quiz-header">
@@ -39,14 +40,16 @@
                 <h1 class="question" id="question-text">Loading…</h1>
                 <div class="options" id="options"></div>
             </section>
-            <div id="confetti-root" class="confetti-burst" aria-hidden="true"></div>
-            <div id="celebrate-overlay" class="celebrate-overlay" hidden></div>
-            <div id="celebrate" class="celebrate-message" hidden>Great job! 🎉</div>
+
+            <section class="toast" id="toast" role="status" aria-live="assertive" hidden></section>
         </main>
-        
+
+        <!-- Confetti and celebration elements -->
+        <div id="confetti-root"></div>
+        <div id="celebrate-overlay" class="celebrate-overlay" hidden></div>
+        <div id="celebrate" class="celebrate" hidden></div>
     </div>
+
     <script src="quiz.js" defer></script>
 </body>
 </html>
-
-
