--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@
             <div class="timer-circle" id="timer-circle">
               <span class="timer-text" id="timer-text">30</span>
             </div>
+            <div class="streak-display">
+              <span id="streak">Streak: 0</span>
+            </div>
           </div>
         </div>
         <div class="meta">
