--- a/quiz.html
+++ b/quiz.html
@@ -49,6 +49,6 @@
         <div id="celebrate" class="celebrate" hidden></div>
     </div>
 
-    <script src="quiz.js" defer></script>
+    <script src="quiz.js?v=4&t=1736183579" defer></script>
 </body>
 </html>
