--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div id="app">
     <!-- Header -->
     <header class="app-header">
-      <div class="brand">Arivoli: Test for Young Minds</div>
+      <div class="brand">Arivoli: MCQs for Young Minds</div>
       <div class="controls">
         <button id="back-btn" class="ghost" hidden>⟵ Back</button>
         <div class="segmented" aria-label="Language switch">
@@ -34,7 +34,7 @@
            <div class="welcome-right">
              <h1 class="welcome-title" id="welcome-title">Arivoli</h1>
              <p class="welcome-sub" id="welcome-sub">
-               MCQs for Young Minds — explore Science and level up as you learn!
+               MCQs for Young Minds — Explore Science and level up as you learn!
              </p>
              <button id="begin-btn" class="primary">Let's Begin 🚀</button>
              <div class="welcome-features">
@@ -62,9 +62,6 @@
        <section class="landing" id="avatar-select" hidden>
          <h1 class="landing-title" id="avatar-title">Choose your avatar</h1>
          <div class="avatars" id="avatars"></div>
-         <div class="avatar-actions">
-           <button id="avatar-continue" class="primary" disabled>Continue</button>
-         </div>
        </section>
 
       <!-- Levels -->
